@@ -105,6 +105,8 @@
 					</tr>
 					<tr>
 						<td>详细地址:</td><td colspan="3"><input type="text" id="id_receiver_address" class="simple-text" style="width:400px;" /></td>
+						<td>实付:</td><td><input type="text" id="id_payment" class="simple-text" /></td>
+						<td>邮费:</td><td><input type="text" id="id_post_fee" class="simple-text" /></td>
 					</tr>
 					<tr>
 						<td colspan="6"></td>
